# ai-aws-deployment

./: .gitignore  README.md  payload.json  pyproject.toml  setup.txt  test.py  todo.txt  train.py  zappa_settings.json
ai_aws_deployment/: train.py
ai_aws_deployment/api/: app.py
models/: model.joblib  model.pkl
periscope_aws_deployment/api/: app.py
tests/: test_ai_aws_deployment.py
