[tool.poetry]
name = "periscope-aws-deployment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.1"
numpy = "^1.17"
scikit-learn = "^0.21.3"
awscli = "^1.16"
boto3 = "^1.9"
pylint = "^2.3"
flask = "^1.1"
zappa = "^0.48.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
